# flat

./: .gitignore  1.txt  Cargo.toml  README.md  file_gen.js  js_len.js  jtxt.js  node_jtxt.js  package-lock.json  package.json
.github/workflows/: js.yml  rust.yml
src/: main.rs
