[package]
name = "jtxt"
version = "0.1.0"
edition = "2021"
authors = ["frank <sunwu51@126.com>"]
description = "A JavaScript syntax text processing tool, an awk alternative."
repository = "https://www.github.com/sunwu51/jtxt"
license = "MIT"

[[bin]]
name = "jtxt"
path = "src/main.rs"

[dependencies]
clap = "4.5.20"
deno_core = "0.314.2"
